--- a/storyLine.html
+++ b/storyLine.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 
 <html>
-	
-  <head>
+
+<head class="bound">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,  initial-scale=1">
+  <link rel="stylesheet" href="style.css">
+
+  <!--P5.js metadata-->
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
+  <script src="timePeriods.js"></script>
+<!--   <script src="questions.js"></script> -->
+
+  <title>Story Line</title>
+</head>
+
+<body>
   
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,  initial-scale=1">
-		<link rel="stylesheet" href="style.css">
-    
-    <!--P5.js metadata-->
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
-	
-    <title>Story Line</title>
-  </head>
+</body>
 
-  <body>
-
-    <script src="timePeriods.js"></script>
-
-
-
-    
-  </body>
+</html>
