--- a/index.html
+++ b/index.html
@@ -21,34 +21,13 @@
           <h1 class="center">Revelation</h1>
           <h4 class="center">Time Traveler are you ready to begin?</h4>
 
-          <a href="storyLine.html" class="bord"> jaida testing? </a>
-          <br><br>
-<!--       <button id="huh" onclick="change()">NNN</button>
-        <script> 
-          function change() {
-            sessionStorage.setItem("level", 0)
-          sessionStorage.getItem('label')
-          var x = document.createElement("BUTTON");
-          var t = document.createTextNode("Click me");
-          x.appendChild(t);
-          document.body.appendChild(x);
-          }
-        </script>
-           -->
-          <button id="new" onClick="changePage()">New Game</button>
+          <button id="new" onClick="changePage()">Start Game</button>
           <script>
             function changePage() {
-              
-              window.location.href = "./levelSelect.html";
+              window.location.href = "./storyLine.html";
             }
           </script>
 
-          <button id="continue" onClick="changePage()">Continue Game</button>
-          <script>
-            function changePage() {
-              window.location.href = "./levelSelect.html";
-            }
-          </script>
         </center>
       </th>
     </tr>
