--- a/index.html
+++ b/index.html
@@ -8,26 +8,37 @@
   <meta name="viewport" content="width=device-width,  initial-scale=1">
   <link rel="stylesheet" href="style.css">
 
-  <title>Bruh</title>
-
+  <title>Revelation</title>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 <body>
 
-  <table class="bound"> <!-- table is used to make border around screen -->
+  <table class="bound">
+    <!-- table is used to make border around screen -->
     <tr>
       <th>
         <center>
           <h1 class="center">Revelation</h1>
           <h4 class="center">Time Traveler are you ready to begin?</h4>
-
+          <br><br>
           <button id="new" onClick="changePage()">Start Game</button>
+          <br><br>
           <script>
             function changePage() {
               window.location.href = "./storyLine.html";
             }
           </script>
 
+          <h1>Our Mission: </h1>
+          <p>Welcome time traveler… </p>
+          <p>
+            Recently the Board of Time and Space has determined multiple instances of improper use of your traveling
+            powers. In order to keep your powers you must fix the errors in time you have created. Once you have
+            completed all 3 restorations, you will regain full use of your powers once again. In order to repair the
+            timeline, you must choose the right answers to make the right changes to time. As of right now you are
+            restricted to traveling to Ancient Times, the Middle Ages, and the 20th Century.
+          </p>
         </center>
       </th>
     </tr>
